--- a/config.ini
+++ b/config.ini
@@ -1,4 +1,5 @@
 [Paths]
 PiHoleApi: http://rpi-hole/admin/api.php
 ArialBlackFont: C:\\Windows\\Fonts\\Arial\\ariblk.ttf
+ArialFont: C:\\Windows\\Fonts\\Arial\\arial.ttf
 ImageDir: E:\\Users\\draugr\\Downloads\\Pi-Hole\\
